# smart_home_project

./: README.md
Device1_coap/: CMakeLists.txt  sdkconfig  sdkconfig.old
Device1_coap/main/: CMakeLists.txt  coap_server_example_main.c  wifi_conection.c
Device2_mqtt/: CMakeLists.txt  sdkconfig  sdkconfig.old
Device2_mqtt/main/: CMakeLists.txt  app_main.c  app_main.h  ds18b20.c  mqtt.c  mqtt.h  wifi_conection.c  wifi_conection.h
HomeCenter/: CMakeLists.txt  sdkconfig  sdkconfig.old
HomeCenter/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.h  coap.c  coap.h  http.c  http.h  mqtt.c  mqtt.h  wifi.c  wifi.h
